--- a/trunk/samples/MicroVoiceLite/MicroVoiceLite.rc
+++ b/trunk/samples/MicroVoiceLite/MicroVoiceLite.rc
@@ -88,39 +88,45 @@ BEGIN
     DEFPUSHBUTTON   "È·¶¨",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_MICROVOICELITE_DIALOG DIALOGEX 0, 0, 295, 173
+IDD_MICROVOICELITE_DIALOG DIALOGEX 0, 0, 359, 257
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "MicroVoice Lite"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "²¦ºÅ",IDC_BNT_MAKECALL,156,37,50,14
-    PUSHBUTTON      "×¢²á",IDC_BNT_REGISTER,24,79,50,14
-    PUSHBUTTON      "¹Ò¶Ï",IDC_BNT_DROPCALL,220,36,50,14
-    PUSHBUTTON      "×¢Ïú",IDC_BNT_UNREGISTER,85,78,50,14
-    EDITTEXT        IDC_EDIT_USERNAME,27,19,53,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PASSWORD,26,40,54,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_HOST,27,59,76,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_DIAL_NUM,157,18,111,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Dial",IDC_BNT_MAKECALL,19,123,50,14
+    PUSHBUTTON      "Register",IDC_BNT_REGISTER,39,79,50,14
+    PUSHBUTTON      "Hangup",IDC_BNT_DROPCALL,83,123,50,14
+    PUSHBUTTON      "UnRegister",IDC_BNT_UNREGISTER,93,79,50,14
+    EDITTEXT        IDC_EDIT_USERNAME,39,19,53,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PASSWORD,39,40,54,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_HOST,39,59,76,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_DIAL_NUM,20,104,111,14,ES_AUTOHSCROLL
     CTEXT           "",IDC_STATIC_INFO,24,4,270,8
-    CONTROL         "Hold",IDC_CHECK_HOLD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,24,102,30,10
-    CONTROL         "AGC",IDC_CHECK_AGC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,102,29,10
-    CONTROL         "NR",IDC_CHECK_NR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,96,102,25,10
-    CONTROL         "Record",IDC_CHECK_RECORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,25,120,38,10
-    CONTROL         "AEC",IDC_CHECK_AEC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,120,29,10
-    PUSHBUTTON      "ÍøËÙ²âÊÔ",IDC_BUTTON_TEST,0,162,6,8,NOT WS_VISIBLE
-    PUSHBUTTON      "0",IDC_BUTTON_DTMF_0,198,132,30,14
-    PUSHBUTTON      "1",IDC_BUTTON_DTMF_1,156,60,30,14
-    PUSHBUTTON      "2",IDC_BUTTON_DTMF_2,198,60,30,14
-    PUSHBUTTON      "3",IDC_BUTTON_DTMF_3,240,60,30,14
-    PUSHBUTTON      "4",IDC_BUTTON_DTMF_4,156,84,30,14
-    PUSHBUTTON      "5",IDC_BUTTON_DTMF_5,198,84,30,14
-    PUSHBUTTON      "6",IDC_BUTTON_DTMF_6,240,84,30,14
-    PUSHBUTTON      "7",IDC_BUTTON_DTMF_7,156,108,30,14
-    PUSHBUTTON      "8",IDC_BUTTON_DTMF_8,198,108,30,14
-    PUSHBUTTON      "9",IDC_BUTTON_DTMF_9,240,108,30,14
-    PUSHBUTTON      "*",IDC_BUTTON_DTMF_10,156,132,30,14
-    PUSHBUTTON      "#",IDC_BUTTON_DTMF_11,240,132,30,14
+    CONTROL         "Hold",IDC_CHECK_HOLD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,140,30,10
+    CONTROL         "AGC",IDC_CHECK_AGC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,150,18,29,10
+    CONTROL         "NR",IDC_CHECK_NR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,18,25,10
+    CONTROL         "Record",IDC_CHECK_RECORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,140,38,10
+    CONTROL         "AEC",IDC_CHECK_AEC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,150,36,29,10
+    PUSHBUTTON      "ÍøËÙ²âÊÔ",IDC_BUTTON_TEST,6,120,6,8,NOT WS_VISIBLE
+    PUSHBUTTON      "0",IDC_BUTTON_DTMF_0,61,228,30,14
+    PUSHBUTTON      "1",IDC_BUTTON_DTMF_1,18,156,30,14
+    PUSHBUTTON      "2",IDC_BUTTON_DTMF_2,61,156,30,14
+    PUSHBUTTON      "3",IDC_BUTTON_DTMF_3,102,156,30,14
+    PUSHBUTTON      "4",IDC_BUTTON_DTMF_4,18,180,30,14
+    PUSHBUTTON      "5",IDC_BUTTON_DTMF_5,61,180,30,14
+    PUSHBUTTON      "6",IDC_BUTTON_DTMF_6,102,180,30,14
+    PUSHBUTTON      "7",IDC_BUTTON_DTMF_7,18,204,30,14
+    PUSHBUTTON      "8",IDC_BUTTON_DTMF_8,61,204,30,14
+    PUSHBUTTON      "9",IDC_BUTTON_DTMF_9,102,204,30,14
+    PUSHBUTTON      "*",IDC_BUTTON_DTMF_10,18,228,30,14
+    PUSHBUTTON      "#",IDC_BUTTON_DTMF_11,102,228,30,14
+    COMBOBOX        IDC_COMBO_CAM_LIST,171,60,180,79,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Camera",IDC_STATIC,144,62,24,8
+    LTEXT           "Username",IDC_STATIC,6,22,32,8
+    LTEXT           "Password",IDC_STATIC,7,43,30,8
+    LTEXT           "Proxy",IDC_STATIC,17,62,18,8
+    EDITTEXT        IDC_EDIT1,150,78,204,174,ES_AUTOHSCROLL | WS_DISABLED
 END
 
 
@@ -183,9 +189,9 @@ BEGIN
     IDD_MICROVOICELITE_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 288
+        RIGHTMARGIN, 352
         TOPMARGIN, 7
-        BOTTOMMARGIN, 166
+        BOTTOMMARGIN, 250
     END
 END
 #endif    // APSTUDIO_INVOKED
